# v0.31 - Unpublished
################################################################################

# Mejor changes  ---------------------------------------------------------------

- Added upload for the analysed data for plotting
- Added analysis report page and its responsivness 

# Minor changes ----------------------------------------------------------------

- Changed style of the Download button

# Bug Fix ----------------------------------------------------------------------


# Other ------------------------------------------------------------------------

################################################################################
# v0.30.1 - Published 24/05/2020
################################################################################

# Mejor changes  ---------------------------------------------------------------

- Moved loading of a data from Upload to separate function
- Upload and analysis of multiple data is now supported
- Added module for saving data
- Added module for exporting and downloading data

# Minor changes ----------------------------------------------------------------

- Title of an app is now a variable
- Added small progress bar if more then one dataset was upload to indicate which 
  dataset is currently analyzed

# Bug Fix ----------------------------------------------------------------------

- Fixed analysis of the end morphology 

# Other ------------------------------------------------------------------------

- Started documentation of changes (a.k.a. Change Log)

################################################################################
# v0.30 - Published 18/05/2020
################################################################################

# Mejor changes  ---------------------------------------------------------------

- Added all tools from the local module
- Cleaned CSS
- Added fully functional button to the set-up settings