@@ -224,11 +224,13 @@ Pre_Analysis <- function (input, output, session){
   Dist_pole <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole1_00")]))["plus_dist_to_pole"]
   Elips <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole1_00")]))["Elipse_Position"]
   Minus_dist <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole1_00")]))["minus_dist_to_pole"]
+  k_fiber <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole1_00")]))["Fiber_Name"]
   LD_P1 <<- cbind(LD_P1,
                  Plus_end,
                  Dist_pole,
                  Elips,
-                 Minus_dist)
+                 Minus_dist,
+                 k_fiber)
   
   for (i in as.numeric(which(colnames(Segments) == "Pole1_00")+1) : as.numeric(which(colnames(Segments) == "Pole2_00") - 1)){
     tryCatch({
@@ -237,11 +239,13 @@ Pre_Analysis <- function (input, output, session){
       DF_Dist_pole <<- get(paste(colnames(Segments)[i]))["plus_dist_to_pole"]
       DF_Elips <<- get(paste(colnames(Segments)[i]))["Elipse_Position"]
       Minus_dist <<- get(paste(colnames(Segments)[i]))["minus_dist_to_pole"]
+      k_fiber <<- get(paste(colnames(Segments)[i]))["Fiber_Name"]
       DF <<- cbind(DF_LD,
                   DF_Plus_end,
                   DF_Dist_pole,
                   DF_Elips,
-                  Minus_dist)
+                  Minus_dist,
+                  k_fiber)
       
       LD_P1 <<- rbind(LD_P1, 
                      DF)
@@ -257,11 +261,13 @@ Pre_Analysis <- function (input, output, session){
     Plus_end <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole2_00")]))["plus_dist_to_kinetochore_core"]
     Dist_pole <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole2_00")]))["plus_dist_to_pole"]
     Elips <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole2_00")]))["Elipse_Position"]
+    k_fiber <<- get(paste(colnames(Segments)[which(colnames(Segments) == "Pole2_00")]))["Fiber_Name"]
     LD_P2 <<- cbind(LD_P2,
                    Plus_end,
                    Dist_pole,
                    Elips,
-                   Minus_dist)
+                   Minus_dist,
+                   k_fiber)
   }, error = function(e){})
   
   
@@ -272,11 +278,13 @@ Pre_Analysis <- function (input, output, session){
       DF_Plus_end <<- get(paste(colnames(Segments)[i]))["plus_dist_to_kinetochore_core"]
       DF_Dist_pole <<- get(paste(colnames(Segments)[i]))["plus_dist_to_pole"]
       DF_Elips <<- get(paste(colnames(Segments)[i]))["Elipse_Position"]
+      k_fiber <<- get(paste(colnames(Segments)[i]))["Fiber_Name"]
       DF <<- cbind(DF_LD,
                   DF_Plus_end,
                   DF_Dist_pole,
                   DF_Elips,
-                  Minus_dist)
+                  Minus_dist,
+                  k_fiber)
       
       LD_P2 <<- rbind(LD_P2, 
                      DF)
