@@ -26,6 +26,9 @@
 
 # Other ------------------------------------------------------------------------
 
+- Change treshold for the ellipse model
+- Added plotting for the Ellipse, plus end and unified model
+
 ################################################################################
 # v0.30.1 - Published 24/05/2020
 ################################################################################
